--- a/Task1-LDA-News Classification/Task1_LDA_News_Classification.ipynb
+++ b/Task1-LDA-News Classification/Task1_LDA_News_Classification.ipynb
@@ -33,11 +33,11 @@
         "An introduction to what and how does LDA model work?\n",
         "\n",
         "Implementation of LDA model wiht Python:\n",
-        "Activity 1: Text representation\n",
-        "Activity 2: Training LDA model\n",
+        "- Activity 1: Text representation\n",
+        "- Activity 2: Training LDA model\n",
         "\n",
         "Analysising your results\n",
-        "Activity 3: Visualisation of text classification"
+        "- Activity 3: Visualisation of text classification"
       ]
     },
     {
