--- a/Task1-LDA-News Classification/Task1_LDA_News_Classification.ipynb
+++ b/Task1-LDA-News Classification/Task1_LDA_News_Classification.ipynb
@@ -100,7 +100,7 @@
         "Source of dataset:\n",
         "https://huggingface.co/datasets/SetFit/bbc-news\n",
         "\n",
-        "> CNN-DailyMail News Text Summarization\n",
+        "CNN-DailyMail News Text Summarization\n",
         "The CNN / DailyMail Dataset is an English-language dataset containing just over 300k unique news articles as written by journalists at CNN and the Daily Mail. The current version supports both extractive and abstractive summarization, though the original version was created for machine reading and comprehension and abstractive question answering.\n",
         "\n",
         "Source of dataset:\n",
