--- a/Task1-LDA-News Classification/Task1_LDA_News_Classification.ipynb
+++ b/Task1-LDA-News Classification/Task1_LDA_News_Classification.ipynb
@@ -147,7 +147,7 @@
         "\n",
         "import nltk\n",
         "nltk.download('punkt_tab')\n",
-        "import zipfile\n",
+        "import zipfile\n"
       ]
     },
     {
